--- a/templates/site/base.html
+++ b/templates/site/base.html
@@ -10,6 +10,13 @@
 
   <title>{% block title %}{% if current_site %}{{ current_site.name }}{% else %}Wiki{% endif %}{% endblock %}</title>
   <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+  
+  <!--[if lt IE 9]>
+  		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  	
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   {% block search_robots %}
@@ -18,10 +25,16 @@
 
   <link href="//fonts.googleapis.com/css?family=Cabin:regular,regularitalic,bold" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+  
+  <script type="text/javascript" src="theme/js/tabs.js"></script>
 
   {% block media %}
   <link rel="stylesheet" href="{% static "theme/css/reset.css" %}">
   <link rel="stylesheet" href="{% static "theme/css/site.css" %}">
+  
+  <link rel="stylesheet" href="{% static "theme/css/base.css" %}">
+  <link rel="stylesheet" href="{% static "theme/css/layout.css" %}">
+  <link rel="stylesheet" href="{% static "theme/css/skeleton.css" %}">
   {% endblock %}
   {% block head_extra %}{% endblock %}
 </head>
